@@ -1549,7 +1549,9 @@ any)</simpara></listitem>
 <parameter>treemodel</parameter> child rows of the row specified by
 <parameter>path</parameter> and pointed to by <parameter>iter</parameter>
 are reordered. <parameter>new_order</parameter> is an array of node index
-numbers representing the new order of the rows.</para>
+numbers representing the new order of the rows. The value of
+<parameter>new_order</parameter> cannot be retrieved in PyGTK because it is
+passed as an opaque pointer (gpointer) value.</para>
 
     </refsect2>
 
