@@ -2929,9 +2929,8 @@ any)</simpara></listitem>
 	</varlistentry>
       </variablelist>
 
-      <para>The "columns-changed" signal is emitted when a
-<parameter>treeview</parameter> a column has been added, removed or
-moved.</para>
+      <para>The "columns-changed" signal is emitted when a column has been
+added to, removed from or moved in <parameter>treeview</parameter>.</para>
 
     </refsect2>
 
