@@ -1,3 +1,10 @@
+2004-05-30  John Finlay  <finlay@moeraki.com>
+
+	* pygtk-gtktreemodel.xml ("rows-reordered") Note that new_order is
+	a gpointer value.
+
+	* pygtk-gtktreeview.xml ("columns-changed") Fix confusing wording.
+
 2004-05-29  John Finlay  <finlay@moeraki.com>
 
 	* pygtk-gtktreeview.xml (set_column_drag_function) Add description
